<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="video"
        app:title="@string/video">
        <EditTextPreference
            app:key="cameraId"
            app:defaultValue="0"
            app:title="@string/camera_id" />
        <SwitchPreferenceCompat
            app:key="useUsbCamera"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="false"
            app:title="@string/use_usb_camera"/>
        <ListPreference
            app:key="cameraResolution"
            app:title="@string/camera_resolution"
            app:entries="@array/cameraResolutionsEntries"
            app:entryValues="@array/cameraResolutionsValues"
            app:defaultValue="1920x1080"/>
        <ListPreference
            app:key="cameraFps"
            app:title="@string/camera_fps"
            app:entries="@array/cameraFpsEntries"
            app:entryValues="@array/cameraFpsValues"
            app:defaultValue="60-90"/>
        <ListPreference
            app:key="bitrateLimit"
            app:title="@string/bitrate_limit"
            app:entries="@array/bitrateLimitEntries"
            app:entryValues="@array/bitrateLimitValues"
            app:defaultValue="6000000"/>
        <SwitchPreferenceCompat
            app:key="useExtraEncoder"
            app:summaryOn="@string/use_extra_encoder_on"
            app:summaryOff="@string/use_extra_encoder_off"
            app:defaultValue="true"
            app:title="@string/use_extra_encoder"/>
        <ListPreference
            app:key="recordedVideoBitrate"
            app:title="@string/recorded_video_bitrate"
            app:entries="@array/recordedVideoBitrateEntries"
            app:entryValues="@array/recordedVideoBitrateValues"
            app:dependency="useExtraEncoder"
            app:defaultValue="20000000"/>
        <SwitchPreferenceCompat
            app:key="invertVideoAxisX"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="false"
            app:title="@string/invert_video_axis_x"/>
        <SwitchPreferenceCompat
            app:key="invertVideoAxisY"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="false"
            app:title="@string/invert_video_axis_y"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="audio"
        app:title="@string/audio">
        <SwitchPreferenceCompat
            app:key="sendAudioStream"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="false"
            app:title="@string/send_audio_stream"/>
        <ListPreference
            app:key="audioStreamBitrate"
            app:title="@string/audio_stream_bitrate"
            app:entries="@array/audioStreamBitrateEntries"
            app:entryValues="@array/audioStreamBitrateValues"
            app:dependency="sendAudioStream"
            app:defaultValue="96000"/>
        <SwitchPreferenceCompat
            app:key="recordAudio"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="true"
            app:title="@string/record_audio"/>
        <ListPreference
            app:key="recordedAudioBitrate"
            app:title="@string/recorded_audio_bitrate"
            app:entries="@array/recordedAudioBitrateEntries"
            app:entryValues="@array/recordedAudioBitrateValues"
            app:dependency="recordAudio"
            app:defaultValue="192000"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="osd"
        app:title="@string/osd">
        <SwitchPreferenceCompat
            app:key="showPhoneBattery"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="true"
            app:title="@string/show_phone_battery"/>
        <SwitchPreferenceCompat
            app:key="showNetworkState"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="true"
            app:title="@string/show_network_state"/>
        <SwitchPreferenceCompat
            app:key="showCameraFps"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="true"
            app:title="@string/show_camera_fps"/>
        <SwitchPreferenceCompat
            app:key="showScreenFps"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="false"
            app:title="@string/show_screen_fps"/>
        <SwitchPreferenceCompat
            app:key="showVideoBitrate"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="true"
            app:title="@string/show_video_bitrate"/>
        <SwitchPreferenceCompat
            app:key="showPing"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="true"
            app:title="@string/show_ping"/>
        <SwitchPreferenceCompat
            app:key="showVideoRecordButton"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="true"
            app:title="@string/show_video_record_button"/>
        <SwitchPreferenceCompat
            app:key="showVideoRecordIndication"
            app:summaryOn="@string/on"
            app:summaryOff="@string/off"
            app:defaultValue="true"
            app:title="@string/show_video_record_indication"/>
        <com.rarepebble.colorpicker.ColorPreference
            app:key="osdTextColor"
            app:title="@string/osd_text_color"
            app:defaultValue="@color/white"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="fc"
        app:title="@string/fc">
        <ListPreference
            app:key="mspTelemetryRefreshRate"
            app:title="@string/msp_telemetry_refresh_rate"
            app:entries="@array/mspTelemetryRefreshRateEntries"
            app:entryValues="@array/mspTelemetryRefreshRateValues"
            app:defaultValue="10"/>
        <ListPreference
            app:key="mspRcRefreshRate"
            app:title="@string/msp_rc_refresh_rate"
            app:entries="@array/mspRcRefreshRateEntries"
            app:entryValues="@array/mspRcRefreshRateValues"
            app:defaultValue="20"/>
        <ListPreference
            app:key="serialBaudRate"
            app:title="@string/serial_baud_rate"
            app:entries="@array/serialBaudRateEntries"
            app:entryValues="@array/serialBaudRateValues"
            app:defaultValue="115200"/>
        <EditTextPreference
            app:key="serialPortIndex"
            app:defaultValue="0"
            app:title="@string/serial_port_index" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="rc"
        app:title="@string/rc">
        <Preference
            app:title="@string/channels_mapping"
            app:key="channelsMapping"
            app:summary="@string/channels_mapping_summary" />
    </PreferenceCategory>

</PreferenceScreen>