<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".StartFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_network" />

        <TextView
            android:id="@+id/tvNetworkStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_disconnected" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_controller" />

        <TextView
            android:id="@+id/tvControllerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_disconnected" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_ip"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ip"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_port"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/port"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:singleLine="true"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_key"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/server_key"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:autofillHints="password" />


    <CheckBox
        android:id="@+id/isViewer"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/start_as_viewer" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bConnectDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

        <Button
            android:id="@+id/bShowGl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_video_stream" />

        <Button
            android:id="@+id/bSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:text="@string/version" />
    </LinearLayout>

</LinearLayout>